<resources>
    <string name="app_name">Criminal Intent</string>
    <string name="crime_title_hint">Enter new crime</string>
    <string name="crime_title_lable">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="new_crime">New crime</string>
    <string name="crime_suspect_text">Choose a suspect</string>
    <string name="crime_report_text">Send a crime report</string>
    <string name="crime_report">%1$s!
        The crime was discovered on  %2$s. %3$s, and %4$s
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="crime_photo_button_description">Take photo of crime scene</string>
    <string name="crime_photo_no_image_description">
 Crime scene photo (not set)
 </string>
    <string name="crime_photo_image_description">Crime scene photo (set)</string>
</resources>